--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -148,7 +148,7 @@
                                                           <t t-set="i" t-value="i+1"/>
                                                     </t>
                                                 <t t-if = "i%2 == 0" >
-                                                    <tr style="background-color:#A6CFD5;">
+                                                    <tr style="background-color:#F0F5F9;">
                                                         <td name="td_partida" class="text-center">
                                                             <div class="row" >
                                                                 <div class="col-12  text-center">
@@ -169,7 +169,8 @@
                                                         </td>
                                                         <td name="th_description" style="text-align: justify !important ;">
                                                             <a href="https://airovac-airovactest-1135560.dev.odoo.com"><strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.product_template_id.default_code"></span></strong></a>
-                                                            <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 90% !important;">
+                                                            <br/>
+                                                            <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 94% !important;">
                                                                 <t t-if = "line.product_template_id.description_sale != False" >
                                                                      <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
                                                                         <t t-esc ="va.name" ></t>
@@ -243,8 +244,7 @@
                                                         <td name="th_description" style="text-align: justify !important ;">
                                                              <a href="https://airovac-airovactest-1135560.dev.odoo.com"><strong><span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.product_template_id.default_code"></span></strong></a>
                                                                 <br/>
-                                                            <br/>
-                                                            <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 90% !important;">
+                                                            <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important; line-height: 94% !important;">
 
                                                                 <t t-if = "line.product_template_id.description_sale != False" >
                                                                     <t t-foreach="line.product_id.product_template_attribute_value_ids" t-as="va">
