--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -365,7 +365,7 @@
                                 </div>
                                 <div class="row">
                                         <div class="col-1" >
-                                             <img style="max-height: 50px;" alt="Logo" src='/web/binary/company_logo'/>
+                                             <img class="img-fluid" alt="Logo" src='/web/binary/company_logo'/>
                                          </div>
                                         <div class="col-6 text-left">
                                             <span><t t-esc="doc.create_uid.name" />  </span><br/>
