--- a/presupuesto_airovac/views/sale_portal_templates_inherit.xml
+++ b/presupuesto_airovac/views/sale_portal_templates_inherit.xml
@@ -273,10 +273,17 @@
                             </table>
                     </div>
                </div>
+            </section>
+        </xpath>
 
-
-
-
+         <xpath expr="//section[@id='terms']" position="replace" >
+            <section id="terms" class="mt-5" t-if="sale_order.note">
+                <div   class="col-12 text-left" name="information_block">
+                    <h2 style="font-family: verdana !important;font-weight: bold !important; font-size: 11pt;!important" > Condiciones Generales:</h2>
+                    <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important text-align: justify !important ;" >
+                        <t t-esc ="sale_order.note" />
+                    </p>
+                </div>
             </section>
         </xpath>
 
