--- a/presupuesto_airovac/views/sale_portal_templates_inherit.xml
+++ b/presupuesto_airovac/views/sale_portal_templates_inherit.xml
@@ -296,6 +296,45 @@
              </section>
         </xpath>
 
+
+        <xpath expr="//div[@id='so_date']" position="replace" >
+            <div class="row" id="so_date">
+                <div class="col-2 text-left">
+                    <p  style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important;" >
+                        <span>Contacto:</span><br/>
+                        <t t-if="sale_order.state == 'draft'">
+                            Quotation Date:
+                        </t>
+                        <t t-if="sale_order.state in ['sale', 'done', 'cancel']">
+                            Order Date:
+                        </t>
+                        <span>Fecha de expiración:</span><br/>
+                        <span>Condiciones:</span>
+                    </p>
+                </div>
+                <div class="col-5 text-left">
+                    <p  style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important;" >
+                        <span t-field="doc.create_uid.name"></span><br/>
+                        <span t-field="doc.date_order" t-options='{"format": "dd/MM/yyyy"}'  ></span><br/>
+                        <span t-field="doc.validity_date" ></span><br/>
+                        <span t-field="doc.payment_term_id.name"></span>
+
+                    </p>
+                </div>
+                <div class="col-5 " style="vertical-align: text-top !important;">
+                    <p class="text-left" style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important; ">
+                        <span itemprop="name" t-field="doc.partner_id.parent_id.name"></span><br/>
+                        <span itemprop="name" t-field="doc.partner_id.name"></span><br/>
+                        <t t-if = "doc.partner_id.phone != True" >
+                            <span itemprop="name" t-field="doc.partner_id.phone"></span><br/>
+                        </t>
+                        <span itemprop="name" t-field="doc.partner_id.email"></span>
+                    </p>
+                </div>
+            </div>
+        </xpath>
+
+
     </template>
 
 </odoo>
