--- a/presupuesto_airovac/views/sale_portal_templates_inherit.xml
+++ b/presupuesto_airovac/views/sale_portal_templates_inherit.xml
@@ -82,7 +82,7 @@
                                             <div class="row">
                                                 <div class="col-12  text-center">
                                                     <t t-if = "line.product_template_id.image_1920 != False" >
-                                                        <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)" style="max-height: 50px;"/>
+                                                        <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)" style="max-height: 250px;"/>
                                                     </t>
                                                     <t t-if = "line.product_template_id.image_1920 == False" >
                                                         <img class="img-fluid" t-att-src="'/presupuesto_airovac/static/src/img/caja.png'" style="max-height: 250px;" />
@@ -156,7 +156,7 @@
                                             <div class="row">
                                                 <div class="col-12  text-center">
                                                     <t t-if = "line.product_template_id.image_1920 != False" >
-                                                        <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)" style="max-height: 50px;"/>
+                                                        <img class="img-fluid" t-att-src="'data:image/png;base64,%s' % to_text(line.product_template_id.image_1920)" style="max-height: 250px;"/>
                                                     </t>
                                                     <t t-if = "line.product_template_id.image_1920 == False" >
                                                         <img class="img-fluid" t-att-src="'/presupuesto_airovac/static/src/img/caja.png'" style="max-height: 250px;" />
@@ -304,7 +304,7 @@
                  </div>
                  <div class="row">
                      <div class="col-2" >
-                         <img class="img-fluid" alt="Logo" src='/web/binary/company_logo'/>
+                         <img style="max-height: 250px;" alt="Logo" src='/web/binary/company_logo'/>
                      </div>
                      <div class="col-6 text-left">
                          <span><t t-esc="sale_order.create_uid.name" />  </span><br/>
