--- a/presupuesto_airovac/views/sale_portal_templates_inherit.xml
+++ b/presupuesto_airovac/views/sale_portal_templates_inherit.xml
@@ -302,17 +302,23 @@
                          <t t-esc ="sale_order.note" />
                      </p>
                  </div>
-                 <div class="row">
-                     <div class="col-1" style="background-color:red">
-                         <img style="max-height: 75px;" alt="Logo" src='/web/binary/company_logo'/>
+
+                 <div class="container">
+                    <div class="row">
+                     <div class="col-lg-1 col-md-6 text-center">
+                         <img src="/web/binary/company_logo" style="max-height:75px;"/>
                      </div>
-                     <div class="col-6 text-left" style="vertical-align:middle !important;">
-                         <p style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt;!important">
-                            <t t-esc="sale_order.create_uid.name" /> <br/>
-                            <t t-esc="sale_order.create_uid.function" />
-                         </p>
+                     <div class="col-lg-4 col-md-6 text-center">
+                         <div class="row" style="height:50%; ">
+                             <span style="margin:auto;"><t t-esc="sale_order.create_uid.name"></t> </span>
+                         </div>
+                         <div class="row" style="height:50%;">
+                            <span style="margin-left:auto;  margin-right:auto"><t t-esc="sale_order.create_uid.function"></t></span>
+                         </div>
                      </div>
+                   </div>
                  </div>
+
              </section>
         </xpath>
 
@@ -324,7 +330,7 @@
                         <div class="col-6">
                             <span>Contacto:</span>
                         </div>
-                        <div class="col-6">
+                        <div class="col-6" style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt;!important">
                             <span><t t-esc="sale_order.create_uid.name"></t></span><br/>
                             <t t-if = "sale_order.create_uid.phone != False" >
                                 <span><t t-esc="sale_order.create_uid.phone"></t></span><br/>
@@ -369,13 +375,13 @@
                         <t t-if = "sale_order.partner_id.parent_id.name != False" >
                             <span itemprop="name" t-field="sale_order.partner_id.parent_id.name"></span><br/>
                         </t>
-                        <t t-if = "sale_order.partner_id.name != False" >
-                             <span itemprop="name" t-field="sale_order.partner_id.name"></span><br/>
+                        <t t-if ="sale_order.partner_id.name != False" >
+                            <span itemprop="name" t-field="sale_order.partner_id.name"></span><br/>
                         </t>
                         <t t-if = "sale_order.partner_id.phone != False" >
                             <span itemprop="name" t-field="sale_order.partner_id.phone"></span><br/>
                         </t>
-                        <span itemprop="name" t-field="sale_order.partner_id.email"></span>
+                            <span itemprop="name" t-field="sale_order.partner_id.email"></span>
                     </p>
                 </div>
             </div>
