--- a/presupuesto_airovac/views/sale_portal_templates_inherit.xml
+++ b/presupuesto_airovac/views/sale_portal_templates_inherit.xml
@@ -282,22 +282,6 @@
                  <div   class="col-12 text-left" name="information_block">
                      <h2 style="font-family: verdana !important;font-weight: bold !important; font-size: 11pt;!important" > Condiciones Generales:</h2>
 
-                         <t t-if="sale_order.note != True" >
-                             <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important text-align: justify !important ;" >
-                                LOS EQUIPOS SE COTIZAN LAB » Nuestro almacén en Monterrey
-                                Los precios son en dólares americanos y se cobrarán en dólares, ó al tipo de cambio de venta bancario vigente a la fecha del pago
-                                Los precios no incluyen el 16% de I.V.A.
-                                Todos los pedidos de productos "made to order", especiales ó configurables, tales como válvulas de mariposa, válvulas superiores a 2.5", UMAS, o cualquier otro producto que se indique lo requiera, deberán colocarse con anticipo, sin excepción, aún si las condiciones de pago de esta cotización no lo indican.
-                                La entrega del material ó embarque, se realizará una vez confirmado el pago en firme en nuestras cuentas bancarias.
-                                Cuentas Bancarias AiroVAC
-                                En caso que esta cotización se exprese LAB en una ubicación distinta a nuestras instalaciones, el tiempo de entrega será de 1 a 5 días hábiles adicionales a lo expresado en cada partida,
-                                y requeriremos la confirmación por escrito, de que en dicha obra ó almacén, cuentan con los elementos necesarios para la descarga segura del material en cuestión.
-                                Toda solicitud de cambio logístico que sea solicitada por parte del cliente, será cotizada por parte de AiroVAC, y ejecutada, previa autorización y pago por parte del cliente.
-                                Tiempos de entrega: los indicados en cada partida, salvo previa venta; y son a partir de la recepción de su Orden de Compra y Anticipo
-                                Las estas existencias de esta propuesta, pudieran no estar disponibles al momento de su compra; en dado caso, se indicará el tiempo de entrega una vez colocado el pedido al fabricante.
-                                La garantía de los equipos depende de la marca y modelo, y va desde 1 hasta 2 años a patir de la entrega.
-                             </p>
-                         </t>
                      <p style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt;!important text-align: justify !important ;" >
                          <t t-esc ="sale_order.note" />
                      </p>
@@ -330,7 +314,7 @@
                         <div class="col-6">
                             <span>Contacto:</span>
                         </div>
-                        <div class="col-6" style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt;!important">
+                        <div class="col-6" >
                             <span><t t-esc="sale_order.create_uid.name"></t></span><br/>
                             <t t-if = "sale_order.create_uid.phone != False" >
                                 <span><t t-esc="sale_order.create_uid.phone"></t></span><br/>
