--- a/presupuesto_airovac/views/sale_portal_templates_inherit.xml
+++ b/presupuesto_airovac/views/sale_portal_templates_inherit.xml
@@ -40,18 +40,18 @@
         </xpath>
 
         <xpath expr="//section[@id='details']" position="replace" >
-            <section>
+            <section id='details'>
                 <table class="table table-sm o_main_table">
                     <thead style="color:black !important; font-family: verdana !important;font-weight: normal !important; font-size: 11pt !important;">
                         <tr>
-                            <th width="14%" name="th_partida" class="text-center" style="vertical-align:middle">Partida</th>
+                            <th width="14%" name="th_partida" class="text-center" style="vertical-align:middle" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">Partida</th>
                             <th width="32%" name="th_description" class="text-center" style="vertical-align:middle">Descripción</th>
-                            <th width="10%" name="th_etiqueta_a" class="text-center" style="vertical-align:middle; font-size: 10pt !important;" ><span  t-field="sale_order.e_etiqueta_title_a" /></th>
-                            <th width="10%" name="th_etiqueta_b" class="text-center" style="vertical-align:middle; font-size: 10pt !important;"><span  t-field="sale_order.e_etiqueta_title_b" /></th>
-                            <th width="8%" name="th_quantity" class="text-center" style="vertical-align:middle">Cantidad</th>
-                            <th width="8%" name="th_priceunit" class="text-center" style="vertical-align:middle">Precio unitario</th>
+                            <th width="10%" name="th_etiqueta_a" class="text-center" style="vertical-align:middle; font-size: 10pt !important;" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}"><span  t-field="sale_order.e_etiqueta_title_a" /></th>
+                            <th width="10%" name="th_etiqueta_b" class="text-center" style="vertical-align:middle; font-size: 10pt !important;" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}"><span  t-field="sale_order.e_etiqueta_title_b" /></th>
+                            <th width="8%" name="th_quantity" class="text-center" style="vertical-align:middle">Cant.</th>
+                            <th width="8%" name="th_priceunit" class="text-center" style="vertical-align:middle" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">Precio unitario</th>
                             <th width="8%" name="th_subtotal" class="text-center" style="vertical-align:middle">Subtotal  <![CDATA[&nbsp;]]> <t t-esc="sale_order.pricelist_id.currency_id.name"></t></th>
-                            <th width="10%" name="th_e_t_e" class="text-center" style="vertical-align:middle">T.E</th>
+                            <th width="10%" name="th_e_t_e" class="text-center" style="vertical-align:middle" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">T.E</th>
                         </tr>
                     </thead>
                     <!--
@@ -77,7 +77,7 @@
                                 </t>
                                 <t t-if = "i%2 == 0" >
                                     <tr style="background-color:#F1F4F8;">
-                                        <td name="td_partida" class="text-center">
+                                        <td name="td_partida" class="text-center" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
                                             <div class="row" >
                                                 <div class="col-12  text-center">
                                                     <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.e_partida"></span>
@@ -110,16 +110,16 @@
                                                 </t>
                                             </p>
                                         </td>
-                                        <td name="td_etiqueta_a" class="text-center" style="vertical-align:middle">
+                                        <td name="td_etiqueta_a" class="text-center" style="vertical-align:middle" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
                                             <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;"  t-field="line.e_etiqueta_line_a"></span>
                                         </td>
-                                        <td name="td_etiqueta_b" class="text-center" style="vertical-align:middle">
+                                        <td name="td_etiqueta_b" class="text-center" style="vertical-align:middle" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
                                             <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" t-field="line.e_etiqueta_line_b"></span>
                                         </td>
                                         <td name="td_quantity" class="text-center" style="vertical-align:middle">
                                             <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;"  t-field="line.product_uom_qty"></span>
                                         </td>
-                                        <td name="td_priceunit" class="text-center" style="vertical-align:middle">
+                                        <td name="td_priceunit" class="text-center" style="vertical-align:middle" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
                                             <t t-if = "sale_order.breakdown == True" >
                                                 <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" t-field="line.price_unit"  t-options="{'widget': 'monetary', 'display_currency': sale_order.currency_id}" ></span>
                                             </t>
@@ -142,7 +142,7 @@
                                             </t>
                                         </td>
 
-                                        <td name="td_e_t_e" class="text-center" style="vertical-align:middle">
+                                        <td name="td_e_t_e" class="text-center" style="vertical-align:middle" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
                                             <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" t-field="line.e_t_e"></span>
                                         </td>
 
@@ -151,7 +151,7 @@
 
                                 <t t-if = "i%2 == 1" >
                                     <tr class="">
-                                        <td name="td_partida" class="text-center">
+                                        <td name="td_partida" class="text-center" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
                                             <div class="row" >
                                                 <div class="col-12  text-center">
                                                     <span style="font-family: verdana !important;font-weight: bold !important; font-size: 10pt !important;" t-field="line.e_partida"></span>
@@ -185,16 +185,16 @@
                                                 </t>
                                             </p>
                                         </td>
-                                        <td name="td_etiqueta_a" class="text-center" style="vertical-align:middle">
+                                        <td name="td_etiqueta_a" class="text-center" style="vertical-align:middle" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
                                             <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;"  t-field="line.e_etiqueta_line_a"></span>
                                         </td>
-                                        <td name="td_etiqueta_b" class="text-center" style="vertical-align:middle">
+                                        <td name="td_etiqueta_b" class="text-center" style="vertical-align:middle" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
                                             <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" t-field="line.e_etiqueta_line_b"></span>
                                         </td>
                                         <td name="td_quantity" class="text-center" style="vertical-align:middle">
                                             <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;"  t-field="line.product_uom_qty"></span>
                                         </td>
-                                        <td name="td_priceunit" class="text-center" style="vertical-align:middle">
+                                        <td name="td_priceunit" class="text-center" style="vertical-align:middle" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
                                             <t t-if = "sale_order.breakdown == True" >
                                                 <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" t-field="line.price_unit" t-options="{'widget': 'monetary', 'display_currency': sale_order.currency_id}"></span>
                                             </t>
@@ -217,7 +217,7 @@
                                             </t>
                                         </td>
 
-                                        <td name="td_e_t_e" class="text-center" style="vertical-align:middle">
+                                        <td name="td_e_t_e" class="text-center" style="vertical-align:middle" t-attf-class="text-right {{ 'd-none d-sm-table-cell' if report_type == 'html' else '' }}">
                                             <span style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important;" t-field="line.e_t_e"></span>
                                         </td>
 
