--- a/presupuesto_airovac/reports/presu.xml
+++ b/presupuesto_airovac/reports/presu.xml
@@ -77,6 +77,70 @@
 
 
                             <div class="article o_report_layout_standard o_company_1_layout" data-oe-model="sale.order" data-oe-id="18" data-oe-lang="es_ES">
+                                <div class="row" ><!--nuevos-->
+                                    <div class="col-6 text-left">
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <span>Contacto:</span>
+                                            </div>
+                                            <div class="col-6" >
+                                                <span><t t-esc="sale_order.create_uid.name"></t></span><br/>
+                                                <t t-if = "sale_order.create_uid.phone != False" >
+                                                    <span><t t-esc="sale_order.create_uid.phone"></t></span><br/>
+                                                </t>
+                                                <t t-if = "sale_order.create_uid.email != False" >
+                                                    <span><t t-esc="sale_order.create_uid.email"></t></span><br/>
+                                                </t>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-6">
+                                                    <span> Fecha de cotización: </span>
+                                                    <span>Order Date:</span>
+
+                                            </div>
+                                            <div class="col-6">
+                                                <span t-field="sale_order.date_order" t-options='{"format": "dd/MM/yyyy"}'  />
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <span>Fecha de expiración:</span>
+                                            </div>
+                                            <div class="col-6">
+                                                <span t-field="sale_order.date_order" t-options='{"format": "dd/MM/yyyy"}'  ></span>
+                                            </div>
+                                        </div>
+                                        <div class="row">
+                                            <div class="col-6">
+                                                <span>Condiciones:</span>
+                                            </div>
+                                            <div class="col-6">
+                                                <span><t t-esc="sale_order.payment_term_id.name"></t></span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-2">
+                                    </div>
+                                    <div class="col-4 " style="vertical-align: text-top !important;">
+                                        <p class="text-left" style="font-family: verdana !important;font-weight: normal !important; font-size: 10pt !important; ">
+                                            <t t-if = "sale_order.partner_id.parent_id.name != False" >
+                                                <span itemprop="name" t-field="sale_order.partner_id.parent_id.name"></span><br/>
+                                            </t>
+                                            <t t-if ="sale_order.partner_id.name != False" >
+                                                <span itemprop="name" t-field="sale_order.partner_id.name"></span><br/>
+                                            </t>
+                                            <t t-if = "sale_order.partner_id.phone != False" >
+                                                <span itemprop="name" t-field="sale_order.partner_id.phone"></span><br/>
+                                            </t>
+                                            <span itemprop="name" t-field="sale_order.partner_id.email"></span>
+                                        </p>
+                                    </div>
+
+
+                                </div><!--row nuevosl-->
+
+
                                 <div class="row" ><!--row fechas y comercial-->
                                     <div class="col-2 text-left">
                                         <p  style="font-family: verdana !important;font-weight: normal !important; font-size: 9pt !important;" >
